--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,12 @@ body {
 ul {
   margin: 0;
   padding: 0;
-  width: 75%;
+  width: 100%;
+}
+
+.close{
+  float: right;
+  margin-right: 10%;
 }
 
 
@@ -85,7 +90,7 @@ input {
 }
 
 
-.addBtn {
+.addItem {
 
   padding: 10px;
   width: 25%;
